<package>
  <name>gmapping</name>
  <version>0.0.0</version>
  <description>Map an unkown environement and encapsulate the data in grid occupancy map</description>
  <author>Zarak Khan</author>
  <maintainer email="zarakkhan23951@hotmail.co.uk">Zarak Khan</maintainer>
  <license>Apache 2.0</license>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
